<?xml version="1.0"?>
<package format="2">
  <name>hardware</name>
  <version>0.0.0</version>
  <description>Library with classes for hardware</description>

  <maintainer email="Joao.Moura@ed.ac.uk">Joao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial_arm_lib</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>ipab_lwr_msgs</depend>
<!--
  <depend>orocos_kdl</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
-->
</package>
